--- a/public/assets/css/sb-admin-2.css
+++ b/public/assets/css/sb-admin-2.css
@@ -9792,17 +9792,17 @@ a:focus {
   outline: none;
 }
 
-#wrapper {
+.wrapper {
   display: flex;
 }
 
-#wrapper #content-wrapper {
+.wrapper .content-wrapper {
   background-color: #f8f9fc;
   width: 100%;
   overflow-x: hidden;
 }
 
-#wrapper #content-wrapper #content {
+.wrapper .content-wrapper .content {
   flex: 1 0 auto;
 }
 
