--- a/public/assets/css/sb-admin-2.css
+++ b/public/assets/css/sb-admin-2.css
@@ -10171,16 +10171,16 @@ a:focus {
   height: 4.375rem;
 }
 
-.topbar #sidebarToggleTop {
+.topbar .sidebarToggleTop {
   height: 2.5rem;
   width: 2.5rem;
 }
 
-.topbar #sidebarToggleTop:hover {
+.topbar .sidebarToggleTop:hover {
   background-color: #eaecf4;
 }
 
-.topbar #sidebarToggleTop:active {
+.topbar .sidebarToggleTop:active {
   background-color: #dddfeb;
 }
 
@@ -10410,7 +10410,7 @@ a:focus {
   font-weight: 700;
 }
 
-.sidebar #sidebarToggle {
+.sidebar .sidebarToggle {
   width: 2.5rem;
   height: 2.5rem;
   text-align: center;
@@ -10418,18 +10418,18 @@ a:focus {
   cursor: pointer;
 }
 
-.sidebar #sidebarToggle::after {
+.sidebar .sidebarToggle::after {
   font-weight: 900;
   content: '\f104';
   font-family: 'Font Awesome 5 Free';
   margin-right: 0.1rem;
 }
 
-.sidebar #sidebarToggle:hover {
+.sidebar .sidebarToggle:hover {
   text-decoration: none;
 }
 
-.sidebar #sidebarToggle:focus {
+.sidebar .sidebarToggle:focus {
   outline: none;
 }
 
@@ -10438,7 +10438,7 @@ a:focus {
   overflow: hidden;
 }
 
-.sidebar.toggled #sidebarToggle::after {
+.sidebar.toggled .sidebarToggle::after {
   content: '\f105';
   font-family: 'Font Awesome 5 Free';
   margin-left: 0.25rem;
@@ -10665,15 +10665,15 @@ a:focus {
   color: #6e707e;
 }
 
-.sidebar-light #sidebarToggle {
+.sidebar-light .sidebarToggle {
   background-color: #eaecf4;
 }
 
-.sidebar-light #sidebarToggle::after {
+.sidebar-light .sidebarToggle::after {
   color: #b7b9cc;
 }
 
-.sidebar-light #sidebarToggle:hover {
+.sidebar-light .sidebarToggle:hover {
   background-color: #dddfeb;
 }
 
@@ -10717,19 +10717,19 @@ a:focus {
   color: #fff;
 }
 
-.sidebar-dark #sidebarToggle {
+.sidebar-dark .sidebarToggle {
   background-color: rgba(255, 255, 255, 0.2);
 }
 
-.sidebar-dark #sidebarToggle::after {
+.sidebar-dark .sidebarToggle::after {
   color: rgba(255, 255, 255, 0.5);
 }
 
-.sidebar-dark #sidebarToggle:hover {
+.sidebar-dark .sidebarToggle:hover {
   background-color: rgba(255, 255, 255, 0.25);
 }
 
-.sidebar-dark.toggled #sidebarToggle::after {
+.sidebar-dark.toggled .sidebarToggle::after {
   color: rgba(255, 255, 255, 0.5);
 }
 
