--- a/public/assets/css/sb-admin-2.css
+++ b/public/assets/css/sb-admin-2.css
@@ -10869,9 +10869,10 @@ a:focus {
 }
 
 .bg-login-image {
-  background: url("https://source.unsplash.com/K4mSJ7kc0As/600x800");
+  background: url("https://pbs.twimg.com/profile_images/492376220697247744/jV4gAOU3.png");
   background-position: center;
-  background-size: cover;
+  background-repeat: no-repeat;
+  background-size: 90%;
 }
 
 .bg-register-image {
