--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,35 @@ form.user div.alert {
   margin-top: 1rem;
   text-align: center;
 }
+
+div.loading {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+div.loading i {
+  color: white;
+}
+
+.alert-dismissible .btn-close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 2;
+  padding: .5rem 1rem;
+}
+
+.btn-close {
+  box-sizing: content-box;
+  width: 1em;
+  height: 1em;
+  padding: .25em .25em;
+  color: #000;
+  border: 0;
+  border-radius: .25rem;
+  opacity: .7;
+  background-color: transparent;
+}
