--- a/src/index.css
+++ b/src/index.css
@@ -80,6 +80,51 @@ div.loading i {
   max-width: 350px;
 }
 
-/* .max-w-40 {
-  max-width: 40% !important;
-} */
+.hiddenRow {
+  padding: 0 !important;
+}
+
+.fadeIn {
+  animation: fadein 1s;
+  -moz-animation: fadein 1s; /* Firefox */
+  -webkit-animation: fadein 1s; /* Safari and Chrome */
+  -o-animation: fadein 1s; /* Opera */
+}
+@keyframes fadein {
+  from {
+      opacity:0;
+  }
+  to {
+      opacity:1;
+  }
+}
+@-moz-keyframes fadein { /* Firefox */
+  from {
+      opacity:0;
+  }
+  to {
+      opacity:1;
+  }
+}
+@-webkit-keyframes fadein { /* Safari and Chrome */
+  from {
+      opacity:0;
+  }
+  to {
+      opacity:1;
+  }
+}
+@-o-keyframes fadein { /* Opera */
+  from {
+      opacity:0;
+  }
+  to {
+      opacity: 1;
+  }
+}
+
+.table-hover-custom tbody tr:hover {
+  background-color: #e3f2fd;
+  border-bottom-color: #FFFFFF;
+  outline: 1px solid #FFFFFF;
+}
