Simple table for commissions

--- a/src/index.css
+++ b/src/index.css
@@ -123,8 +123,51 @@ div.loading i {
   }
 }
 
+.fadeOut {
+  animation: fadeOut 1s;
+  -moz-animation: fadeOut 1s; /* Firefox */
+  -webkit-animation: fadeOut 1s; /* Safari and Chrome */
+  -o-animation: fadeOut 1s; /* Opera */
+}
+@keyframes fadeOut {
+  from {
+      opacity:1;
+  }
+  to {
+      opacity:0;
+  }
+}
+@-moz-keyframes fadeOut { /* Firefox */
+  from {
+      opacity:1;
+  }
+  to {
+      opacity:0;
+  }
+}
+@-webkit-keyframes fadeOut { /* Safari and Chrome */
+  from {
+      opacity:1;
+  }
+  to {
+      opacity:0;
+  }
+}
+@-o-keyframes fadeOut { /* Opera */
+  from {
+      opacity:1;
+  }
+  to {
+      opacity:0;
+  }
+}
+
 .table-hover-custom tbody tr:hover {
   background-color: #e3f2fd;
   border-bottom-color: #FFFFFF;
   outline: 1px solid #FFFFFF;
+}
+
+.pointer {
+  cursor: pointer;
 }
