start with dashboard charts and tables

--- a/src/index.css
+++ b/src/index.css
@@ -17,9 +17,9 @@ div.loading {
   justify-content: center;
 }
 
-div.loading i {
+/* div.loading i {
   color: white;
-}
+} */
 
 .alert-dismissible .btn-close {
   position: absolute;
