--- a/src/components/ui/Input/input.css
+++ b/src/components/ui/Input/input.css
@@ -1,73 +1,87 @@
 .field {
   width: 100%;
   height: 56px;
-  border-radius: 4px;
   position: relative;
+  margin-bottom: 0.25rem;
   background-color: rgba(255, 255, 255, 0.3);
-  transition: 0.3s background-color ease-in-out, 0.3s box-shadow ease-in-out;
-}
-
-.field:hover {
-  background-color: rgba(255, 255, 255, 0.45);
-  box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.05);
+  transition: 0.3s background-color ease-in-out;
 }
 
 .field.active {
   background-color: #ffffff;
-  box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.2);
+}
+
+.field.active input:disabled {
+  background-color: #eaecf4;
+  opacity: 1;
+}
+
+.field input:disabled {
+  background-color: #eaecf4;
+  opacity: 1;
 }
 
 .field.active input {
-  padding: 24px 16px 8px 16px;
+  padding: 24px 5px 8px 5px;
+  color: #6e707e;
+  background-color: #fff;
+  border-bottom: 1px solid #4e73df;
+  outline: 0;
+  transition: 0.3s background-color ease-in-out, 0.1s padding ease-in-out, 0.15s border-bottom ease-in-out;
+}
+
+.field.active input:focus {
+  transition: 0.15s box-shadow ease-in-out;
+  box-shadow: #4e73df 0px 1px 0px 0px;
 }
 
 .field.active input + label {
   top: 4px;
   opacity: 1;
-  color: #512da8;
-}
-
-.field.locked {
-  pointer-events: none;
+  color: #4e73df;
 }
 
 .field input {
   width: 100%;
-  height: 56px;
+  height: calc(1.5em + 1.5rem + 8px);
   position: relative;
-  padding: 0px 16px;
+  padding: 0px 5px;
+
   border: none;
-  border-radius: 4px;
+  border-bottom: 1px solid;
+
   font-family: "Gotham SSm A", "Gotham SSm B", sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: normal;
   background-color: transparent;
-  color: #282828;
+  color: gray;
   outline: none;
-  box-shadow: 0px 4px 20px 0px transparent;
-  transition: 0.3s background-color ease-in-out, 0.3s box-shadow ease-in-out,
-    0.1s padding ease-in-out;
+  transition: 0.3s background-color ease-in-out, 0.1s padding ease-in-out, 1s border-bottom ease-in-out, 0.15s box-shadow ease-in-out;
   -webkit-appearance: none;
 }
 
 .field input::-webkit-input-placeholder {
-  color: rgba(0,0,0, 0.8);
+  color: #858796;
+  opacity: 1;
 }
 .field input::-moz-placeholder {
-  color: rgba(0,0,0, 0.8);
+  color: #858796;
+  opacity: 1;
 }
 .field input:-ms-input-placeholder {
-  color: rgba(0,0,0, 0.8);
+  color: #858796;
+  opacity: 1;
 }
 .field input:-moz-placeholder {
-  color: rgba(0,0,0, 0.8);
+  color: #858796;
+  opacity: 1;
 }
 
 .field input + label {
   position: absolute;
   top: 24px;
-  left: 16px;
+  left: 5px;
   font-family: "Gotham SSm A", "Gotham SSm B", sans-serif;
   font-size: 12px;
   font-weight: 600;
@@ -78,19 +92,28 @@
   transition: 0.1s all ease-in-out;
 }
 
-.field input + label.error {
-  color: #ec392f;
+.field input.is-invalid {
+  border-color: #e74a3b;
+  padding-right: calc(1.5em + 0.75rem);
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' fill='none' stroke='%23e74a3b' viewBox='0 0 12 12'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23e74a3b' stroke='none'/%3e%3c/svg%3e");
+  background-repeat: no-repeat;
+  background-position: right calc(0.375em + 0.1875rem) center;
+  background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
 }
 
-.field p.predicted {
-  position: absolute;
-  top: 8px;
-  left: 16px;
-  font-family: "Gotham SSm A", "Gotham SSm B", sans-serif;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 24px;
-  color: #e0e0e0;
-  opacity: 1;
-  pointer-events: none;
+.field.active input.is-invalid {
+  color: #6e707e;
+  background-color: #fff;
+  border-bottom: 1px solid #e74a3b;
+  outline: 0;
+  transition: 0.3s background-color ease-in-out, 0.1s padding ease-in-out, 0.15s border-bottom ease-in-out;
+}
+
+.field.active input.is-invalid:focus {
+  transition: 0.15s box-shadow ease-in-out;
+  box-shadow: #e74a3b 0px 1px 0px 0px;
+}
+
+.field.active input.is-invalid + label {
+  color: #e74a3b;
 }
