add image to chart when no data

--- a/public/assets/css/sb-admin-2.css
+++ b/public/assets/css/sb-admin-2.css
@@ -11318,3 +11318,10 @@ footer.sticky-footer .copyright {
 body.sidebar-toggled footer.sticky-footer {
   width: 100%;
 }
+
+/* Pendiente */
+/* @include media-breakpoint-between(xs,sm){
+  .btn {
+      @include button-size($input-btn-padding-y-sm, $input-btn-padding-x-sm, $font-size-sm, $line-height-sm, $btn-border-radius-sm);
+  }
+} */
