--- a/src/index.css
+++ b/src/index.css
@@ -235,3 +235,12 @@ div.loading-section {
   max-width: 50px;
   max-height: 50px;
 }
+
+/* .show-first-letter {
+  font-size: 0;
+}
+
+.show-first-letter:first-letter {
+  font-size: 12px;
+
+} */
