Formulario de configuración de comisiones por punto de entrega
Formulario de configuración de puntos de entrega. Se hacen validaciones y se agregan estilos

--- a/src/micromodal.css
+++ b/src/micromodal.css
@@ -40,6 +40,16 @@
   align-items: center;
 }
 
+.modal__footer_commission {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.modal__footer_commission button {
+  margin-left: 10px;
+}
+
 .modal__title {
   margin-top: 0;
   margin-bottom: 0;
