--- a/public/assets/css/sb-admin-2.css
+++ b/public/assets/css/sb-admin-2.css
@@ -11325,3 +11325,20 @@ body.sidebar-toggled footer.sticky-footer {
       @include button-size($input-btn-padding-y-sm, $input-btn-padding-x-sm, $font-size-sm, $line-height-sm, $btn-border-radius-sm);
   }
 } */
+
+.card-header-actions .card-header {
+  height: 3.5625rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 0.5625rem;
+  padding-bottom: 0.5625rem;
+}
+.card-header-actions .card-header .dropdown-menu {
+  margin-top: 0;
+  top: 0.5625rem !important;
+}
+
+.w-15 {
+  width: 15% !important;
+}
